tests/errors/assign_to_let.milo
// @error: cannot assign to immutable variable 'x'
fn main() -> i32 {
    let x: i32 = 5
    x = 10
    return 0
}
